# Template-OpenGL

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  Main.cpp  Readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml
app/: App.cpp  CMakeLists.txt
cmake/: CompilerWarnings.cmake  Format.cmake
include/: Camera.hpp  Shader.hpp
include/Core/: Camera.hpp  Shader.hpp
libraries/: CMakeLists.txt
libraries/include/Core/: Shader.hpp
libraries/src/Core/: CMakeLists.txt  Camera.cpp  Shader.cpp
resources/shaders/: fragment.glsl  vertex.glsl
src/: Camera.cpp  Shader.cpp
src/Core/: CMakeLists.txt  Camera.cpp  Shader.cpp
